kubernetes/szilardshome/infrastructure/networking/traefik-internal/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-internal-class

spec:
  controllerName: szilardshome.com/traefik-gc-internal
