kubernetes/szilardshome/infrastructure/networking/traefik-internal/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-internal
  labels:
    gatewayclass.szilardshome.com/type: traefik-internal
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-internal
  namespace: traefik-internal
spec:
  addresses:
  - type: IPAddress
    value: 10.10.4.60
  gatewayClassName: traefik-internal
  listeners:
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: "*.szilardshome.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-internal-cert
            kind: Secret
            group: ""
