kubernetes/szilardshome/infrastructure/networking/traefik-internal/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard-internal-route 
  namespace: traefik-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "10.10.4.60"
spec:
  parentRefs:
    - name: gateway-internal
      namespace: traefik-internal
  hostnames:
    - "traefik-internal.szilardshome.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs: 
        - name: api@internal
          kind: TraefikService
          group: traefik.io 
          port: 8080
